# dice

./: BUILD.gn  CMakeLists.txt  README.md  action.yml
.github/: Dockerfile.smolbsd
.github/smol/: LICENSE  README.md  check-results.sh  run.sh
.github/smol/cicd/: options.mk
.github/smol/cicd/etc/: rc
.github/smol/scripts/: create-smolbsd.sh  pack-payload.sh  run-payload.sh  unpack-payload.sh
.github/workflows/: actions-benchmark.yml  actions-ohos.yml  actions-smolbsd.yml  actions.yml  dependants.yml  docker-smolbsd.yml  docker.yml  netbsd.yml  regression.yml
bench/: common.mk
bench/leveldb/: Makefile
bench/leveldb/patches/: 01-leveldb
bench/lib/: CMakeLists.txt
bench/micro/: CMakeLists.txt  Makefile  micro3.c  micro4.c  micro5.c  microcb-multi.c  microcb-tls.c  microcb.c
bench/raytracing/: Makefile
bench/raytracing/patches/: reduce-samples.patch
bench/regression/: Makefile
bench/scratchapixel/: Makefile
cmake/: tmplr.cmake
doc/: api.md  benchmarking.md  contributing.md  design.md  testing.md
examples/malloc/: run.sh
fastch/: dispatch.c
include/: CMakeLists.txt
include/bingo/: interpose.h
include/dice/: callback.h  compiler.h  dispatch.h  handler.h  interpose.h  log.h  mempool.h  module.h  now.h  pubsub.h  rbtree.h  self.h  switcher.h  thread_id.h  types.h  utils.h
include/dice/chains/: capture.h  intercept.h  sequence.h
include/dice/events/: annotate_rwlock.h  cpuset_alloc.h  cxa.h  dice.h  malloc.h  memaccess.h  memcpy.h  mman.h  path_alloc.h  printf_alloc.h  pthread.h  rw_locks.h  self.h  semaphore.h  stacktrace.h  string_alloc.h  thread.h
mod/: autocept_generic.S  cxa.cpp
net/: get_dependencies.sh  get_smolBSD.sh
scripts/: CMakeLists.txt  add2img_smolbsd.sh  benchmark.sh  dice  get_pkgsrc.sh  get_results.sh  get_smolBSD.sh  list_events.sh  mkimg_smolbsd.sh  process-timedrun.sh  regression.sh  run_smolbsd.sh  update-bench-index.sh
scripts/smolbsd/: untar2img.sh
src/: CMakeLists.txt
src/dice/: CMakeLists.txt  box.c  dispatch.c  dispatch.c.in  dispatch_0.c  dispatch_1.c  dispatch_2.c  dispatch_3.c  dispatch_4.c  dispatch_5.c  dispatch_6.c  dispatch_chain.c.in  loader.c  mempool-box.c  mempool.c  memset.c  ps_builtin.c  ps_control.c  ps_plugin.c  ps_subs.c  pubsub-box.c  pubsub.c  rbtree.c  registry.c  utils.c
src/mod/: CMakeLists.txt  annotate_rwlock.c  autocept.c  autocept.h  autocept_aarch64.S  autocept_generic.S  autocept_list.S  autocept_x86_64.S  cpuset_alloc.c  cxa.c  logger.c  malloc.c  memcpy.c  memcpy.c.disabled  mman.c  path_alloc.c  printf_alloc.c  pthread_cond.c  pthread_create.c  pthread_mutex.c  pthread_rwlock.c  pthread_spinlock.c  self-box.c  self.c  sem.c  sequencer.c  stacktrace.c  string_alloc.c  switcher.c  tsan.c  tsan.c.in  wrap_memset.c
test/: CMakeLists.txt  constructor_malloc_test.c  ensure_self_fini.c  ensure_self_fini_detach.c  ensure_self_fini_error.c  intercept_event.c  malloc_free_count.c  malloc_free_test.c  phase1_alloc_test.c  pthread_create_detach.c  pthread_create_exit.c  pthread_create_join.c  pthread_exit_window.c  pthread_reuse.c  simple-tsan.c  simple.c  thread_sequence.c
test/checkers/: CMakeLists.txt  id_checker.c  malloc_free_check.c  malloc_free_checker.c  phase1_alloc_checker.c  trace_checker.c  trace_checker.h
test/cxx/: CMakeLists.txt  cond_var_version.cpp  tls_destructor.cpp
test/include/dice/: ensure.h  phase1_alloc.h
test/interpose/: CMakeLists.txt  annotate_rwlock_test.c  cxa_test.c  interpose_test.c.in  interposed.h.in  interposed_.h.in  interposed__.h.in  malloc_test.c  memcpy_test.c  mman_test.c  pthread_cond_test.c  pthread_create_test.c  pthread_mutex_test.c  pthread_rwlock_test.c  sem_test.c
test/log/: CMakeLists.txt  log_levels.c
test/mempool/: CMakeLists.txt  mempool_align_free_test.c  mempool_alignment_test.c  mempool_realloc_growth_test.c  mempool_reuse_test.c
test/order/: CMakeLists.txt  defs.h
test/self/: CMakeLists.txt  self_guard_test.c  self_unique_test.c  self_wait_test.c
test/switcher/: CMakeLists.txt  abort_test.c  anythread_test.c  slack_test.c  yield_continue_test.c
test/traces/: CMakeLists.txt  trace_create_join.c  trace_lock_unlock.c  trace_mutex_2.cpp
test/tsan/: CMakeLists.txt  tsan_test.c  tsan_test.c.in
